--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -689,14 +689,14 @@ input, select, textarea {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("../../images/overlay.png");
+			/* background-image: url("../../images/overlay.png"); */
 			background-color: rgba(19, 21, 25, 0.5);
 			border-radius: 4px;
 			content: '';
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0.25;
 			position: absolute;
 			top: 0;
 			width: 100%;
